# tests

./: CMakeLists.txt  Game.cpp  Game.h  README.md  UserInOut.cpp  UserInOut.h  c++_1.txt  c++_2.txt  c++_3.txt  main.cpp  operating_functions.cpp  operating_functions.h  question.cpp  question.h  quiz.cpp  quiz.h  quiz_1.txt  quiz_2.txt  quiz_3.txt  stl_1.txt  stl_2.txt  stl_3.txt
